fix: fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ body {
   font-weight: 400;
   color: #323c48;
   height: 100%;
+  overflow-x: hidden;
 }
 
 ul {
